# TenderFlow

./: .gitignore  README.md  test-ui.html
Project Submision/: test_tender_B_Dorthmund_catering_facility.docx
backend/: .env.example  WALKTHROUGH.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
backend/agents/: graph.py  state.py
backend/agents/nodes/: analyse_tender.py  draft_sections.py  finalise.py  human_review.py  retrieve_context.py
backend/agents/prompts/: analyse_tender.txt  draft_section.txt  finalise.txt
backend/api/routers/: hitl.py  ingest.py  kb.py  tender.py
backend/api/schemas/: hitl_schemas.py  ingest_schemas.py  tender_schemas.py
backend/config/: settings.py
backend/core/: chunker.py  document_parser.py  embeddings.py  supabase_client.py
backend/db/migrations/: 001_initial_schema.sql
backend/enrichment/: guard.py  model_router.py  schemas.py
backend/scripts/: re_enrich.py  reset_jobs.py
backend/tests/: test_retrieve_context.py
backend/tools/: ingest_tool.py  kb_reader.py  output_tool.py  retrieval_tool.py
debug_ui/: app.py
docs/superpowers/plans/: 2026-04-08-ui-modernization.md  2026-04-08-ui-polish.md
docs/superpowers/specs/: 2026-04-08-tenderflow-design.md  2026-04-08-ui-modernization-design.md
frontend/: index.html  package-lock.json  package.json  skills-lock.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ChatView.css  ChatView.jsx  DocxPreview.css  DocxPreview.jsx  ReviewPanel.css  ReviewPanel.jsx  ScoreCard.css  ScoreCard.jsx  Sidebar.css  Sidebar.jsx  TokenMeter.css  TokenMeter.jsx
frontend/src/utils/: docParser.js  tokens.js
(+9 files in other folders)
