[project]
name = "tenderflow"
version = "0.1.0"
description = "AI-powered tender response agent — ISTARI @ Q-Hack 2026"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
    "voyageai>=0.3",
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.2",
    "supabase>=2.7",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1",
    "openai>=2.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv]
# This is a FastAPI application, not a distributable library.
# Tells uv to manage dependencies only — no package build step.
package = false
